# Windy-Clone

./: .env.example  .env.production.example  .gitignore  BRAND-ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  DNA_STRAND_MASTER_PLAN.md  Dockerfile  INTEGRATION_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
api/app/: __init__.py  config.py  main.py
api/tests/: conftest.py  test_body_size_limit.py  test_boot_guards.py  test_cache_race.py  test_concurrency_fixes.py  test_data_fetcher.py  test_deeplinks.py  test_elevenlabs_pipeline.py  test_housekeeping.py  test_jwt_audience.py  test_legacy.py  test_order_reaper.py  test_orders.py  test_pipeline_awaiting_upstream.py  test_pipeline_dev_mode.py  test_providers.py  test_rate_limit.py  test_signing_key_resolution.py  test_soul_file_export.py  test_trust_cache_bypass.py  test_trust_gates.py  test_upstream_non_json.py  test_webhook_replay_protection.py  test_webhooks.py
deploy/: nginx.conf
deploy/aws/: CLONE_DEPLOYMENT.md
deploy/scripts/: setup-ssl.sh
docs/: BUCKET_C_REVIEW_REQUEST.md  GAP_ANALYSIS.md  HARDENING_REPORT.md  MERGE_TRIAGE.md  POST_MERGE_OPS.md  PROVIDER_INTEGRATION.md  RELOCATION.md  STATIC_AUDIT_2026-04-19.md  USER_JOURNEY.md  WAVE14_AWS_DEPLOY_PLAN.md  agent-trust-gates.md  security-review.md  soul-file-format.md
docs/audit/: concurrency-results.md  curl-matrix.txt  endpoint-inventory.txt  (+1 more)
scripts/: dev.sh  seed-providers.py  smoke-test.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
(+68 files in other folders)
